# Quaternions

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cunit-tests.yml
src/: CMakeLists.txt  MatrixCT.h  Quaternion.h  main.cpp
tests/: CMakeLists.txt  test_quaternion_operations.cpp
